fix: z-index mismatch in sidebar tabs

--- a/src/modules/augmentations/AddAugmentationTab/AddAugmentationTab.scss
+++ b/src/modules/augmentations/AddAugmentationTab/AddAugmentationTab.scss
@@ -18,7 +18,6 @@
     display: flex;
     height: 55px;
     width: 450px;
-    z-index: 9998;
     background: #efefef;
   }
 
